<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/fragmentContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.NewBio">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/background_icon"
            android:backgroundTint="@color/orange"
            android:padding="6dp"
            android:src="@drawable/ic_back"
            android:tint="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="@id/imageBack"
            app:layout_constraintStart_toEndOf="@id/imageBack"
            app:layout_constraintTop_toTopOf="@id/imageBack"
            app:layout_constraintEnd_toStartOf="@id/imageOk"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageOk"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/background_icon"
            android:backgroundTint="@color/orange"
            android:padding="6dp"
            android:src="@drawable/round_check_24"
            android:tint="@color/white"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/orange"
            android:textSize="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/biography"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/change_your_bio"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputBio"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/about_me"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="10sp"
            android:textStyle="normal"
            android:text="@string/write_a_few_words_about_yourself"/>

    </LinearLayout>

</FrameLayout>